# gojo

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  install.sh
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  cmake.cpp  cmake.hpp  commands.cpp  commands.hpp  conan.cpp  conan.hpp  config.cpp  config.hpp  gojo.cpp  literals.hpp  templates.cpp  templates.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  config_test.cpp  utils_test.cpp
test/assets/: test_config_bad.gojo  test_config_good.gojo
